--- a/wiki/couple.wikitext
+++ b/wiki/couple.wikitext
@@ -1,7 +1,5 @@
 ==English==
-
 ===Adjective===
-
 '''couple'''
 
 #Usually referring to one and not two.
@@ -12,5 +10,20 @@
 #Two rotations, movements, etc., which are equal in amount but opposite in direction, and acting along parallel lines or around parallel axes.
 
 ===Translations===
-*[[Hebrew]]: [[זוג]] /zug/
-*[[Russian]]: [[пара]] /para/
+*Chinese: [[一对]], [[一双]]
+*[[Hebrew]]: [[זוג]] (zug)
+*Italian: [[coppia]]
+*Japanese: [[対]], [[夫婦]]
+*[[Russian]]: [[пара]] (para)
+
+----
+
+==French==
+===Noun===
+'''couple''' ''m''
+
+# couple
+
+===Related terms===
+*[[couplage]]
+*[[coupler]]
