--- a/wiki/enclosure.wikitext
+++ b/wiki/enclosure.wikitext
@@ -1,5 +1,9 @@
 ==English==
+===Noun===
+'''enclosure'''
 
-enclosure
+# {{stub}}
 
-===translation===
+===Translations===
+*Chinese: [[围场]], [[附件]]
+*French: [[enclos]] ''m''
