fmt, +senses <basketbrawl#66406>

--- a/wiki/basketbrawl.wikitext
+++ b/wiki/basketbrawl.wikitext
@@ -1,3 +1,15 @@
-Basketbrawl - A basketball game that ends in a brawl.  First heard on ABC News Radio on November 24, 2004, in reference to the Detroit Pistons vs. Indiana Pacers game on November 19, 2004.  Several references to this new word were found on news.google.com so it is currently unknown which news organization first used the new word.
+==English==
 
-[feel free to edit]
+===Etymology===
+Blend of [[basketball]] and [[brawl]]
+
+===Noun===
+'''basketbrawl'''
+
+# Basketball involving a physical brawl.
+# Highly physical basketball in general.
+
+===Proper Noun===
+'''Basketbrawl'''
+
+# An Atari &reg; video game.
