cleanup (hmm . . . I wonder if they had any particular nation in mind) <unilateralism#66410>

--- a/wiki/unilateralism.wikitext
+++ b/wiki/unilateralism.wikitext
@@ -1,2 +1,9 @@
-n.
-A tendency of nations to conduct their foreign affairs individualistically, characterized by minimal consultation and involvement with other nations, even their allies.
+===English===
+
+===Noun===
+'''unilateralism'''
+
+# A tendency of nations to act on their own, or with only minimal consultation and involvement with other nations.
+
+===See Also===
+*[[multilateralism]]
