--- a/wiki/basketbrawl.wikitext
+++ b/wiki/basketbrawl.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-Blend of [[basketball]] and [[brawl]]
+Blend of [[basketball]] and a [[brawl]]
 
 ===Noun===
 '''basketbrawl'''
