--- a/wiki/edress.wikitext
+++ b/wiki/edress.wikitext
@@ -7,5 +7,4 @@ Contraction of '''[[electronic mail]] [[address]]'''.
 ===Noun===
 '''edress''' (plural:'''edresses''')
 
-# the combination of a [[user]]'s name and the name of the [[server]] that user may be contacted at
-via [[email]].
+# the combination of a [[user]]'s name and the name of the [[server]] that user may be contacted at via [[email]].
