--- a/wiki/e-dress.wikitext
+++ b/wiki/e-dress.wikitext
@@ -1,1 +1,10 @@
-#REDIRECT [[edress]]
+==English==
+===Etymology===
+Contraction of '''[[electronic mail]] [[address]]'''.
+===Variant spellings===
+*[[edress]]
+
+===Noun===
+'''e-dress''' (plural:'''edresses''')
+
+# the combination of a [[user]]'s name and the name of the [[server]] that user may be contacted at via [[email]].
