--- a/wiki/e-dress.wikitext
+++ b/wiki/e-dress.wikitext
@@ -7,4 +7,4 @@ Contraction of '''[[electronic mail]] [[address]]'''.
 ===Noun===
 '''e-dress''' (plural:'''edresses''')
 
-# the combination of a [[user]]'s name and the name of the [[server]] that user may be contacted at via [[email]].
+# the combination of a [[user]]'s name and the name of the [[server]] that user may be contacted at via [[email]], normally written as 'username@servername'.
