--- a/wiki/e-dress.wikitext
+++ b/wiki/e-dress.wikitext
@@ -8,3 +8,6 @@ Contraction of '''[[electronic mail]] [[address]]'''.
 '''e-dress''' (plural:'''edresses''')
 
 # the combination of a [[user]]'s name and the name of the [[server]] that user may be contacted at via [[email]], normally written as 'username@servername'.
+
+===History===
+Coined in October 2004 in Kona, Hawaii.
