--- a/wiki/e-dress.wikitext
+++ b/wiki/e-dress.wikitext
@@ -10,4 +10,4 @@ Contraction of '''[[electronic mail]] [[address]]'''.
 # the combination of a [[user]]'s name and the name of the [[server]] that user may be contacted at via [[email]], normally written as 'username@servername'.
 
 ===History===
-Coined in October 2004 in Kona, Hawaii by a technical neophyte attempting to simplify the complexities of electronic communication.
+Coined in October 2004 in Kona, Hawaii by a newbie attempting to simplify the complexities of electronic communication.
