/* Examples */  Romanji -> Romaji <和製英語#513480>

--- a/wiki/%E5%92%8C%E8%A3%BD%E8%8B%B1%E8%AA%9E.wikitext
+++ b/wiki/%E5%92%8C%E8%A3%BD%E8%8B%B1%E8%AA%9E.wikitext
@@ -14,7 +14,7 @@ distinction vs. [[Engrish]]
 -->
 ==Examples==
 {| border="2"
-| '''Japanese word:''' ([[Katakana]] & [[romanji]]:) 
+| '''Japanese word:''' ([[Katakana]] & [[romaji]]:) 
 | '''Lit. Translation & Common English meaning:'''
 |- 
 | &#12486;&#12524;&#12499;&#12466;&#12540;&#12512; (terebige-mu)  
