Marked as a protologism; moved "history" to etym <e-dress#66416>

--- a/wiki/e-dress.wikitext
+++ b/wiki/e-dress.wikitext
@@ -1,13 +1,13 @@
 ==English==
 ===Etymology===
-Contraction of '''[[electronic mail]] [[address]]'''.
+Contraction of '''[[electronic mail]] [[address]]'''; coined as an attempt to simplify the complexities of electronic communication.
+
 ===Variant spellings===
-*[[edress]]
+*[[edress]] (''plural'' '''edresses''')
 
 ===Noun===
-'''e-dress''' (plural:'''edresses''')
+'''e-dress''' (''plural'' '''e-dresses''')
 
-# the combination of a [[user]]'s name and the name of the [[server]] that user may be contacted at via [[email]], normally written as 'username@servername'.
+#The combination of a [[user]]'s name and the name of the [[server]] at which user may be contacted by [[email]], normally written as ''username@servername''.
 
-===History===
-Coined by a newbie attempting to simplify the complexities of electronic communication.
+{{protologism}}
