changed part of speech; some -> "a few"; "less" -> "fewer"; syns <quite a few#66407>

--- a/wiki/quite_a_few.wikitext
+++ b/wiki/quite_a_few.wikitext
@@ -1,17 +1,18 @@
 ==English==
-
-===Noun Phrase===
+===Adjective phrase===
 '''quite a few'''
 
-# An indefinite and somewhat large number, more than [[some]] but less than [[a lot]].
+# An indefinite and somewhat large number; more than [[a few]] but fewer than [[a lot]].
 #: ''I've watched quite a few basketball games in my time.''
 
-===Related Terms===
+====Synonyms====
+*a [[fair number]] of
+
+===Related terms===
 *[[a few]]
 *[[few]]
 *[[quite]]
 *[[quite a bit]]
 
-===See Also===
+===See also===
 *[[a lot]]
-*[[some]]
