--- a/wiki/Jessica.wikitext
+++ b/wiki/Jessica.wikitext
@@ -2,7 +2,7 @@
 ===Proper noun===
 '''Jessica'''
 
-# female given name
+#A female [[given name]].
 
-===Variant===
-*[[Jessie]]
+====Diminutives====
+*[[Jess]], [[Jessie]]
