--- a/wiki/Jess.wikitext
+++ b/wiki/Jess.wikitext
@@ -1,7 +1,11 @@
 ==English==
-
 ===Noun===
-
 '''jess'''
 
 #A short strap fastened around the leg of a bird used in falconry, to which a leash may be fastened.
+
+===Proper noun===
+'''Jess'''
+
+#A short form of the male [[given name]] [[Jesse]].
+#A short form of the female given name [[Jessica]].
