--- a/wiki/Jess.wikitext
+++ b/wiki/Jess.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Noun===
-'''jess'''
+'''jess''' (''plural'' '''jesses''')
 
 #A short strap fastened around the leg of a bird used in falconry, to which a leash may be fastened.
 
