fmt; added defs <dispose#48540>

--- a/wiki/dispose.wikitext
+++ b/wiki/dispose.wikitext
@@ -1,5 +1,7 @@
-==[[Verb]]==
-===Defintion===
-To eliminate or to get rid of things
-===Example===
-I dispose of my trash in the garbage can.
+==English==
+===Transitive verb===
+'''to dispose'''
+#To eliminate or to get rid of
+#:''I dispose of my trash in the garbage can.''
+#To distribute and put in place
+#To deal out; to assign to a use
