deleted enc entry and replaced with edited def from Wikipedia <electromagnetic radiation#66400>

--- a/wiki/electromagnetic_radiation.wikitext
+++ b/wiki/electromagnetic_radiation.wikitext
@@ -1,1 +1,8 @@
-Visible light is an example of electromagnetic radiation in a certain range of frequencies. In decreasing order of wavelength, and increasing order of frequency and energy, the following are the  types of electromagnetic radiation: radio waves (long, medium, short, Very High Frequency, Ultra High Frequency, Super High Frequency, microwaves), infrared, visible light(red, orange, yellow, green, blue, indigo, violet), ultraviolet, X-rays, gamma rays.
+==English==
+===Noun===
+'''electromagnetic radiation''' (''[[uncountable]]'')
+
+#Radiation consisting of oscillating electric and magnetic fields in oriented perpendicularly to each other, moving through space.
+
+===See also===
+*[[w:electromagnetic radiation|Wikipedia article on electromagnetic radiation]]
