fmt; +fr: entry, with some der <jardin#66396>

--- a/wiki/jardin.wikitext
+++ b/wiki/jardin.wikitext
@@ -1,3 +1,16 @@
+==French==
+===Noun===
+'''jardin''' ''m'' (''plural'' '''jardins''')
+
+#[[garden]]
+
+====Derived terms====
+*[[jardin public]]
+*[[jardin zoologique]]
+
+----
 {{-ia-}}
 ===Noun===
-#Garden
+'''jardin'''
+
+#[[garden]]
