made into proper entry <futuristic#66393>

--- a/wiki/futuristic.wikitext
+++ b/wiki/futuristic.wikitext
@@ -1,2 +1,8 @@
+==English==
+===Etymology===
+[[future|futur(e)]] + [[-istic]]
 
-== ''''''''Requested Pelease hold in high regard'''''''' ==
+===Adjective===
+'''futuristic''' (''[[comparative]]'' '''more futuristic''', ''[[superlative]]'' '''most futuristic''')
+
+#Of technology, a concept, etc, advanced so far beyond that which is current as to appear to be from the future.
