made into a proper entry <Ginny#66390>

--- a/wiki/ginny.wikitext
+++ b/wiki/ginny.wikitext
@@ -1,1 +1,5 @@
-Ginny
+==English==
+===Proper noun===
+'''Ginny''' (''plural'' '''Ginnys''')
+
+#A [[diminutive]] of the female [[given name]] [[Virginia]].
