fmt; corrected some errors; extra n sense; some translations <mince#66385>

--- a/wiki/mince.wikitext
+++ b/wiki/mince.wikitext
@@ -1,19 +1,90 @@
 {{1913}}
-{{-en-}}
+==English==
 === Pronunciation===
-\Mince\
-===Verb===
-====Transitive====
-*[[imp.]] & [[p. p.]]: [[minced]]
-*[[p. pr.]] & [[vb. n.]]: Minging
+*[[IPA]]: /mɪns/
+*[[SAMPA]]: /mIns/
+
+===Transitive verb===
+'''to mince''' ('''mincing''', '''minced''', '''minced''')
+
 #To cut into very small pieces; to chop fine. 
 #To suppress or weaken the force of; to extenuate; to  palliate; to tell by degrees, instead of directly and frankly; to clip, as words or expressions; to utter half and keep back half of.
-#:''I know no ways to mince it in love, but directly to say -- "I love you."'' --[[w:Shak]].
-3. To affect; to make a parade of. 
-====Intransitive====
+#:''I know no ways to mince it in love, but directly to say &mdash; "I love you."'' &mdash; [[w:Shakespeare|Shakespeare]]
+#To affect; to make a parade of.
+
+====Translations====
+
+'''chop fine'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*Italian: [[tritare]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+===Intransitive verb===
+'''to mince''' ('''mincing''', '''minced''', '''minced''')
+
 #To walk with short steps; to walk in a prim, affected manner.
 #:''The daughters of Zion are haughty, and walk with  stretched forth necks and wanton eyes, mincing       as they go.'' --[[Is.]] III. 16.
-#:''I'll turn two mincing steps Into a manly  stride.''--Shak.
-#To act or talk with affected nicety; to affect delicacy in  manner.
+#:''I'll turn two mincing steps Into a manly  stride.'' &mdash; [[w:Shakespeare|Shakespeare]]
+#To act or talk with affected nicety; to affect delicacy in manner.
+ 
 ===Noun===
-#A short, precise step; an affected manner.
+'''mince''' (''[[countable]] and [[uncountable]]''; ''plural'' '''minces''')
+
+#(''uncountable'') Finely chopped meat.
+#(''countable'') A short, precise step.
+#(''countable'') An affected manner.
+
+====Translations====
+
+'''finely chopped meat'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*Italian: [[macinata]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''short precise step'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''affected manner'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
