--- a/wiki/%E8%BF%BD.wikitext
+++ b/wiki/%E8%BF%BD.wikitext
@@ -11,17 +11,17 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#pursue, chase after
-*# expel
+*# [[pursue, [[chase]] after
+*# [[expel]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': zhūi (zhui1)
+*** '''[[Pinyin]]''': zhuī (zhui1)
 *** '''[[Wade-Giles]]''': chui<sup>1</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
@@ -29,15 +29,78 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': jeui1
 
+===Compounds===
+*[[追奔逐北]]
+*[[追本穷源]]
+*[[追逼]]
+*[[追补]]
+*[[追捕]]
+*[[追查]]
+*[[追悼]]
+*[[追肥]]
+*[[追风逐电]]
+*[[追赶]]
+*[[追根]]
+*[[追根究底]], [[追根究底]]
+*[[追根溯源]]
+*[[追光]]
+*[[追怀]]
+*[[追悔]]
+*[[追击]]
+*[[追缉]]
+*[[追记]]
+*[[追加]]
+*[[追歼]]
+*[[追剿]]
+*[[追缴]]
+*[[追究]]
+*[[追念]]
+*[[追求]]
+*[[追认]]
+*[[追述]]
+*[[追思]]
+*[[追诉]]
+*[[追溯]]
+*[[追随]]
+*[[追索]]
+*[[追亡逐北]]
+*[[追尾]]
+*[[追问]]
+*[[追想]]
+*[[追星族]]
+*[[追叙]]
+*[[追寻]]
+*[[追忆]]
+*[[追赃]]
+*[[追赠]]
+*[[追逐]]
+*[[追踪]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[つい]] (tsui), [[たい]] (tai)
 ** '''[[Kun]]''': [[おう]] (ou)
+
+===Compounds===
+*[[追憶]]
+*[[追加]]
+*[[追記]]
+*[[追求]]
+*[[追及]]
+*[[追究]]
+*[[追撃]]
+*[[追伸]]
+*[[追随]]
+*[[追訴]]
+*[[追徴]]
+*[[追討]]
+*[[追悼]]
+*[[追尾]]
 
 * '''Other info''':  
 
