--- a/wiki/%E8%BF%BD.wikitext
+++ b/wiki/%E8%BF%BD.wikitext
@@ -11,7 +11,7 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*# [[pursue, [[chase]] after
+*# [[pursue]], [[chase]] after
 *# [[expel]]
 
 
