--- a/wiki/%E9%94%A5.wikitext
+++ b/wiki/%E9%94%A5.wikitext
@@ -13,17 +13,17 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#gimlet, awl, drill, auger
-*# bore
+*#[[gimlet]], [[awl]], [[drill]], [[auger]]
+*# [[bore]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': zhūi (zhui1)
+*** '''[[Pinyin]]''': zhuī (zhui1)
 *** '''[[Wade-Giles]]''': chui<sup>1</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
@@ -33,6 +33,12 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[錐]]
+
+===Compounds===
+*[[锥处囊中]]
+*[[锥刀之末]]
+*[[锥体]]
+*[[锥子]]
 
 * '''Other info''': 
 
