--- a/wiki/%E7%BF%A0.wikitext
+++ b/wiki/%E7%BF%A0.wikitext
@@ -13,17 +13,17 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#color green
-*# kingfisher
+*# colour [[green]]
+*# [[kingfisher]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': chì (chi4), cùi (cui4)
+*** '''[[Pinyin]]''': chì (chi4), cuì (cui4)
 *** '''[[Wade-Giles]]''': ch'ih<sup>4</sup>, ts'ui<sup>4</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
@@ -31,15 +31,28 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': cheui3
 
+===Compounds===
+*[[翠碧]]
+*[[翠菊]]
+*[[翠蓝]]
+*[[翠绿]]
+*[[翠鸟]]
+*[[翠生生]], [[翠生生的]]
+*[[翠微]]
+*[[翠玉]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[すい]] (sui)
 ** '''[[Kun]]''': [[かわせみ]] (kawasemi), [[みどり]] (midori)
+
+===Compounds===
+*[[翠玉]]
 
 * '''Other info''':  
 
