--- a/wiki/%E6%9C%80.wikitext
+++ b/wiki/%E6%9C%80.wikitext
@@ -14,11 +14,11 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': zùi (zui4)
+*** '''[[Pinyin]]''': zuì (zui4)
 *** '''[[Wade-Giles]]''': tsui<sup>4</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
@@ -26,15 +26,52 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': jeui3
 
+===Compounds===
+*[[最初]]
+*[[最大公约数]]
+*[[最好]]
+*[[最后]]
+*[[最后通牒]]
+*[[最惠国待遇]]
+*[[最佳]]
+*[[最近]]
+*[[最为]]
+*[[最小公倍数]]
+*[[最终]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[さい]] (sai)
 ** '''[[Kun]]''': [[もっとも]] (mottomo), [[も]] (mo)
+
+===Compounds===
+*[[最愛]]
+*[[最悪]]
+*[[最強]]
+*[[最近]]
+*[[最古]]
+*[[最後]]
+*[[最期]]
+*[[最高]]
+*[[最終]]
+*[[最初]]
+*[[最小]]
+*[[最小公倍数]]
+*[[最新]]
+*[[最深]]
+*[[最善]]
+*[[最大]]
+*[[最大公約数]]
+*[[最短]]
+*[[最中]]
+*[[最長]]
+*[[最低]]
+*[[最良]]
 
 * '''Other info''':  
 
