/* Translations */ fmt error; but is the italic part of the russian translation an explanation or another translation? why is it italic? <Earthling#66355>

--- a/wiki/Earthling.wikitext
+++ b/wiki/Earthling.wikitext
@@ -6,5 +6,5 @@
 *[[tellurian]]
 *[[terrestrial]]
 
-===Translations===
-*Russian: [[землянин]] ''m", ''[[житель]] [[Земля|Земли]]'' ''m''
+====Translations====
+*Russian: [[землянин]] ''m'', ''[[житель]] [[Земля|Земли]]'' ''m''
