/* See Also */ -> See also <Chomskyan#66345>

--- a/wiki/Chomskyan.wikitext
+++ b/wiki/Chomskyan.wikitext
@@ -6,5 +6,5 @@
 # Relating to the linguist and activist [[w:Noam Chomsky|Noam Chomsky]].
 # (''linguistics'') Following the theoretical approach introduced by Noam Chomsky, et. al.
 
-===See Also===
+===See also===
 *[[transformational grammar]]
