--- a/wiki/%E5%BD%86.wikitext
+++ b/wiki/%E5%BD%86.wikitext
@@ -1,3 +1,5 @@
+* '''Alternate form''': [[别]]
+
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 57''': [[Wiktionary:Chinese radical index 弓|弓]]+12 strokes
 
 * '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 15|15]]
@@ -10,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': awkward
+* '''Common Meaning''': [[awkward]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -25,6 +27,9 @@
 *** '''[[Jyutping]]''':
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': bit3
+
+* '''Style''': [[Traditional Chinese]] 
+** '''[[Simplified Chinese|Simplified]] equivalent''': [[别]]
 
 * '''Other info''': 
 
