--- a/wiki/%E5%88%AB.wikitext
+++ b/wiki/%E5%88%AB.wikitext
@@ -1,4 +1,4 @@
-* '''Alternate form''': [[別]]
+* '''Alternate forms''': [[別]], [[彆]]
 
 * '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 刀|刀]]+5
 
@@ -29,67 +29,69 @@
 ***'''[[Yale]]''': 
 
 * '''Style''': [[Simplified Chinese]] 
-** '''[[Traditional Chinese|Traditional]] equivalent''': [[別]]
+** '''[[Traditional Chinese|Traditional]] equivalent''': [[別]], [[彆]]
 
 ===Adverb===
-
+bié
 # [[don't]]
 
 ===Compounds===
-*[[别本]]
-*[[别称]]
-*[[别出机杼]]
-*[[别出心裁]]
-*[[别处]]
-*[[别的]]
-*[[别邸]]
-*[[别动队]]
-*[[别管]]
-*[[别号]], [[别号儿]]
-*[[别集]]
-*[[别家]]
-*[[别价]]
-*[[别具匠心]]
-*[[别具一格]]
-*[[别具只眼]]
-*[[别开生面]]
-*[[别看]]
-*[[别离]]
-*[[别流]]
-*[[别论]]
-*[[别忙]]
-*[[别名]], [[别名儿]]
-*[[别情]]
-*[[别趣]]
-*[[别饶风致]]
-*[[别人]]
-*[[别史]]
-*[[别是]]
-*[[别树一帜]]
-*[[别墅]]
-*[[别说]]
-*[[别送]]
-*[[别提]]
-*[[别无长物]]
-*[[别无出路]]
-*[[别无二致]]
-*[[别筵]]
-*[[别样]]
-*[[别异]]
-*[[别有洞天]]
-*[[别有风味]]
-*[[别有天地]]
-*[[别有用心]]
-*[[别择]]
-*[[别针]], [[别针儿]]
-*[[别致]]
-*[[别传]]
-*[[别庄]]
-*[[别子]]
-*[[别字]]
-*[[类别]] ([[類別]])
-*[[别扭]]
-*[[别嘴]]
+#bié
+#*[[别本]]
+#*[[别称]]
+#*[[别出机杼]]
+#*[[别出心裁]]
+#*[[别处]]
+#*[[别的]]
+#*[[别邸]]
+#*[[别动队]]
+#*[[别管]]
+#*[[别号]], [[别号儿]]
+#*[[别集]]
+#*[[别家]]
+#*[[别价]]
+#*[[别具匠心]]
+#*[[别具一格]]
+#*[[别具只眼]]
+#*[[别开生面]]
+#*[[别看]]
+#*[[别离]]
+#*[[别流]]
+#*[[别论]]
+#*[[别忙]]
+#*[[别名]], [[别名儿]]
+#*[[别情]]
+#*[[别趣]]
+#*[[别饶风致]]
+#*[[别人]]
+#*[[别史]]
+#*[[别是]]
+#*[[别树一帜]]
+#*[[别墅]]
+#*[[别说]]
+#*[[别送]]
+#*[[别提]]
+#*[[别无长物]]
+#*[[别无出路]]
+#*[[别无二致]]
+#*[[别筵]]
+#*[[别样]]
+#*[[别异]]
+#*[[别有洞天]]
+#*[[别有风味]]
+#*[[别有天地]]
+#*[[别有用心]]
+#*[[别择]]
+#*[[别针]], [[别针儿]]
+#*[[别致]]
+#*[[别传]]
+#*[[别庄]]
+#*[[别子]]
+#*[[别字]]
+#*[[类别]] ([[類別]])
+#biè
+#*[[别扭]]
+#*[[别嘴]]
 
 * '''Other info''': 
 
