--- a/wiki/futuristic.wikitext
+++ b/wiki/futuristic.wikitext
@@ -6,3 +6,11 @@
 '''futuristic''' (''[[comparative]]'' '''more futuristic''', ''[[superlative]]'' '''most futuristic''')
 
 #Of technology, a concept, etc, advanced so far beyond that which is current as to appear to be from the future.
+
+===Translations===
+*French: [[futuriste]]
+*Italian: [[futuristico]]
+
+===Related terms===
+*[[futurism]]
+*[[futurist]]
