--- a/wiki/futurism.wikitext
+++ b/wiki/futurism.wikitext
@@ -1,10 +1,13 @@
 ===Noun===
 '''futurism'''
 
-#The study and prediction of possible futures.
+#The study and prediction of possible [[future]]s.
+
+==== Translations ====
+*French: [[futurisme]]
+*Italian: [[futurismo]]
+*Japanese: [[未来派]]
+*[[Romanica]]: [[futurismo]]
 
 ====Related terms====
 *[[futurist]]
-
-==== Translations ====
-*[[Romanica]]: [[futurismo]]
