self-taught not related, move to see also <autodidact#59483>

--- a/wiki/autodidact.wikitext
+++ b/wiki/autodidact.wikitext
@@ -9,7 +9,6 @@
 ====Related====
 *[[autodidactic]]
 *[[autodidactism]]
-*[[self-taught]]
 
 ====Translations====
 *Finnish: [[itseoppinut]]
@@ -18,3 +17,6 @@
 *Italian: [[autodidatto]] ''m'', [[autodidatta]] ''f''
 *Russian: [[автодидакт]] ''m'', [[самоучка]] ''m''
 *Spanish: [[autodidacto]] ''m'', [[autodidacta]] ''f''
+
+===See also===
+*[[self-taught]]
