--- a/wiki/spr%C3%A5k.wikitext
+++ b/wiki/spr%C3%A5k.wikitext
@@ -9,7 +9,7 @@
 |-
 |- bgcolor="#FFFFF0" align=center
 ! rowspan=2 | 
-| colspan=2 width=105| Singular 
+| colspan=2 | Singular 
 | colspan=2 | Plural
 |- bgcolor="#FFFFF0" align=center
 | width=105 | ''Indefinite'' 
