--- a/wiki/rigide.wikitext
+++ b/wiki/rigide.wikitext
@@ -1,6 +1,10 @@
 ==French==
-
 ===Adjective===
 '''rigide''' ''m/f''
 
 # [[rigid]]
+
+===Related terms===
+*[[rigidement]]
+*[[rigidifier]]
+*[[rigidité]]
