fmt; is this just mexico, mexico & central america, america, all spanish? <mestizo#66364>

--- a/wiki/mestizo.wikitext
+++ b/wiki/mestizo.wikitext
@@ -1,7 +1,13 @@
 {{-es-}}
 ===Adjective===
+'''mestizo'''
+
 #Of mixed, Spanish and Indian heritage
+
 ===Noun===
+'''mestizo'''
+
 #A person of mixed Spanish and Indian heritage
-===Synonym===
+
+===Synonyms===
 *[[cholo]]
