/* Translations */ remove self-link <Khmer#38822>

--- a/wiki/Khmer.wikitext
+++ b/wiki/Khmer.wikitext
@@ -11,8 +11,7 @@
 *[[Khmer Rouge]]
 
 ====Translations====
-
-*{{fr}}: [[khmer]] ''m''
+*{{fr}}: khmer ''m''
 *{{hi}}: [[ख्मेर]]
 *Khmer: [[ែខ្មរ]]
 *Polsih: [[khmerski]]
