--- a/wiki/%D7%A2%D7%91%D7%A8%D7%99%D7%AA.wikitext
+++ b/wiki/%D7%A2%D7%91%D7%A8%D7%99%D7%AA.wikitext
@@ -1,10 +1,11 @@
+==Hebrew==
 ===Etymology===
-Feminine derivation of עבר (Heber). A Jewish woman.
+Feminine derivation of [[עבר]] (Heber). A Jewish woman.
 
 ===Noun===
 '''עברית'''
 
-The original [[Hebrew]] language of the [[Bible]] and the first official language of [[Israel]].
+# The original [[Hebrew]] language of the [[Bible]] and the first official language of [[Israel]].
 
 ====Translations====
 *English: [[Hebrew]]
