linked teleology <teleological#62925>

--- a/wiki/teleological.wikitext
+++ b/wiki/teleological.wikitext
@@ -4,4 +4,4 @@
 
 '''teleological'''
 
-#Of or pertaining to teleology, or the doctrine of design.
+#Of or pertaining to [[teleology]], or the doctrine of design.
