fmt; +pron/hom/rhyme <tort#28406>

--- a/wiki/tort.wikitext
+++ b/wiki/tort.wikitext
@@ -1,11 +1,23 @@
-#''Legal.''  A wrongful act, whether intentional or [[negligence|negligent]], which causes an injury and can be remedied at [[civil law]], usually through awarding damages.
-#(pl.)  The area of [[law]] dealing with such wrongful acts.
+==English==
+=== Pronunciation ===
+*tô(r)t, /ˈtɔː(r)t/, /<tt>"tO:(r)t</tt>/
+*:'''Homophones''': [[taught]] (''non-rhotic accents''), [[taut]] (''non-rhotic accents'')
+*:[[Rhymes:English:-ɔː(r)t|Rhymes: -ɔː(r)t]]
 
-([[w:tort|Wikipedia article]])
+===Noun===
+'''tort'''
+
+#(''Legal'') A wrongful act, whether intentional or [[negligence|negligent]], which causes an injury and can be remedied at [[civil law]], usually through awarding damages.
+#(''plural'') The area of [[law]] dealing with such wrongful acts.
+
+===See also===
+*[[w:tort|Wikipedia article on "tort"]]
 
 ----
-==[[French]]==
+
+==French==
 ===Noun===
+'''tort'''
 
 #[[wrong]], [[mistaken]]
 #:Vous avez tort
