--- a/wiki/Khmer.wikitext
+++ b/wiki/Khmer.wikitext
@@ -13,6 +13,8 @@
 ====Translations====
 *{{fr}}: khmer ''m''
 *{{hi}}: [[ख्मेर]]
+*Japanese: [[クメール語]]
 *Khmer: [[ែខ្មរ]]
 *Polsih: [[khmerski]]
 *Thai: [[ภาษาเขมร]]
+*Vietnamese: [[tiếng Khơ-Me]]
