--- a/wiki/notte.wikitext
+++ b/wiki/notte.wikitext
@@ -1,5 +1,12 @@
 ==Italian==
+===Etymology===
+Latin ''[[nox]]'', ''noctis''
 ===Noun===
 '''notte''' ''f'' (''plural'' '''notti''')
 
 #[[night]]
+
+===Related terms===
+*[[nottambulo]]
+*[[nottata]]
+*[[notturno]]
