/* Verb stems */ <حسن#42416>

--- a/wiki/%D8%AD%D8%B3%D9%86.wikitext
+++ b/wiki/%D8%AD%D8%B3%D9%86.wikitext
@@ -1,19 +1,32 @@
 ==Arabic==
 ===Verb===
-'''حَسُنَ''' (ɧásuna) v.i., Stem I, 3rd masc. sg. perfective
+'''حَسُنَ''' (ɧásuna) ''v.i., Stem I, 3rd masc. sg. perfective''
 
 # to be [[beautiful]]
 # to be [[good]]
 
 ===Verb===
-'''حَسَّنَ''' (ɧássana) v.t., Stem II, 3rd masc. sg. perfective
+'''حَسَّنَ''' (ɧássana) ''v.t., Stem II, 3rd masc. sg. perfective''
 
 # to [[improve]], to [[amend]], to [[perfect]], to [[ameliorate]], to [[better]], to [[polish]], to [[prettify]]
 
 ===Verb===
-'''تَحَسَّنَ''' (taɧássana) v.i., Stem V, 3rd masc. sg. perfective
+'''أحْسَنَ''' (’aɧsána) ''v.i., Stem IV, 3rd masc. sg. perfective''
 
-# to [[ameliorate]], to [[reform]]
+# to make good
+# to do well
+# to know how to use, to be able to use, to know
+
+===Verb===
+'''تَحَسَّنَ''' (taɧássana) ''v.i., Stem V, 3rd masc. sg. perfective''
+
+# to [[ameliorate]]
+# to [[reform]]
+
+===Verb===
+'''اِسْتَحْسَنَ''' (istáɧsana) ''v.t., Stem X, 3rd masc. sg. perfective''
+
+# to think good, to approve
 
 ----
 
