/* Noun, verb */ <عين#55072>

--- a/wiki/%D8%B9%D9%8A%D9%86.wikitext
+++ b/wiki/%D8%B9%D9%8A%D9%86.wikitext
@@ -3,6 +3,24 @@
 *ʕain
 
 ===Noun===
-'''عَين''' (plural: [[عيون]])<!-- (ʕujuːn) -->
+'''ٌعَيْن''' (ʕeyn, ''f/sg''), '''عَيْنَانِ''' (ʕeynáːni, ''dual nom.''), '''عَيْنَيْنِ''' (ʕeynéyni, ''dual acc./gen.''), '''عُيُون''' (ʕuyúːn, ''pl'')
 
 # [[eye]]
+# [[spring]] (of water)
+
+
+'''عَيْنَاىَ''' (ʕeynáːya, ''dual nom.'')
+
+# my two eyes
+
+
+'''عَيْنَاكَ''' (ʕeynáːka, ''dual nom.'')
+
+# your ''(m/sg)'' two eyes
+
+===Verb===
+'''عَيَّنَ''' (ɧáyyana) ''v.t., Stem II, 3rd masc. sg. perfective''
+
+# to [[appoint]], to [[nominate]]
+# to [[define]]
+# to [[designate]], to [[specify]]
