--- a/wiki/%D8%AD%D8%B3%D9%86.wikitext
+++ b/wiki/%D8%AD%D8%B3%D9%86.wikitext
@@ -11,7 +11,7 @@
 # to [[improve]], to [[amend]], to [[perfect]], to [[ameliorate]], to [[better]], to [[polish]], to [[prettify]]
 
 ===Verb===
-'''أحْسَنَ''' (’aɧsána) ''v.i., Stem IV, 3rd masc. sg. perfective''
+'''أحْسَنَ''' (’aɧsána) ''v.i./v.t., Stem IV, 3rd masc. sg. perfective''
 
 # to make good
 # to do well
