+Wikipedia links <channel#66428>

--- a/wiki/channel.wikitext
+++ b/wiki/channel.wikitext
@@ -209,3 +209,7 @@
 ===Derived terms===
 *[[channel-hopping]]
 *[[ion channel]]
+
+===See also===
+*[[w:channel_(geography)|List of Wikipedia articles on channels in geography]]
+*[[w:channel|List of Wikipedia articles on channels in telecommunications]]
