{{fr}}: [[tchétchène]] ''m'' <Chechen#51628>

--- a/wiki/Chechen.wikitext
+++ b/wiki/Chechen.wikitext
@@ -9,7 +9,7 @@
 #:*{{da}}: [[Tjetjensk]]
 #:*{{en}}: [[Chechen]]
 #:*{{fi}}: [[tšetšeeni]]
-#:*{{fr}}: [[Tchétchène]]
+#:*{{fr}}: [[tchétchène]] ''m''
 #:*{{gl}}: [[Checheno]]
 #:*{{de}}: [[Tschetschenisch]]
 #:*{{hu}}: [[csecsen]]
