/* Translations */ change: discipulum-->discipulus <student#47667>

--- a/wiki/student.wikitext
+++ b/wiki/student.wikitext
@@ -17,7 +17,7 @@ From Latin ''[[studens]]'', present participle of ''[[studere]]'', '''study'''
 *German: Student ''m'', [[Studentin]] ''f'', [[Schüler]] ''m'', [[Schülerin]] ''f''
 *Italian: [[studente]] ''m'' / [[studentessa]] ''f'', [[scolaro]] ''m'' / [[scolara]] ''f'', [[alunno]] ''m'' / [[alunna]] ''f''
 *Japanese: [[学生]], [[生徒]]
-*Latin: [[discipulum]] ''m'', [[discipula]] ''f''
+*Latin: [[discipulus]] ''m'', [[discipula]] ''f''
 *Spanish: [[estudiante]] ''m/f'', [[alumno]] ''m'', [[alumna]] ''f''
 *Swedish: [[student#swedish|student]] ''c'', [[studentska]] ''c'' (''to stress it is a female'')
 
