New entry. <discipulus#66442>

--- a/wiki/discipulus.wikitext
+++ b/wiki/discipulus.wikitext
@@ -5,3 +5,31 @@
 ===Noun===
 '''discipulus'''
 # [[Student]].
+
+====Declension====
+Second declension (2).
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Case \ #''
+!style="background:#C0C0C0;"| ''M.''
+!style="background:#C0C0C0;"| ''MM.''
+|-
+!style="background:#C0C0C0;"| ''Nominative''
+|style="background:#F5F5F5;"| <big> discipulus
+|style="background:#F5F5F5;"| <big> discipul&#299;
+|-
+!style="background:#C0C0C0;"| ''Genitive''
+|style="background:#F5F5F5;"| <big> discipul&#299;
+|style="background:#F5F5F5;"| <big> discipul&#333;rum
+|-
+!style="background:#C0C0C0;"| ''Dative''
+|style="background:#F5F5F5;"| <big> discipul&#333;
+|style="background:#F5F5F5;"| <big> discipul&#299;s
+|-
+!style="background:#C0C0C0;"| ''Accusative''
+|style="background:#F5F5F5;"| <big> discipulum
+|style="background:#F5F5F5;"| <big> discipul&#333;s
+|-
+!style="background:#C0C0C0;"| ''Ablative''
+|style="background:#F5F5F5;"| <big> discipul&#333;
+|style="background:#F5F5F5;"| <big> discipul&#299;s
+|}
