--- a/wiki/German.wikitext
+++ b/wiki/German.wikitext
@@ -20,7 +20,7 @@
 *Dutch: [[Duitser]] ''m'', [[Duitse]] ''f''
 *[[Esperanto]]: [[Germano]]
 *Finnish: [[saksalainen]]
-*French: [[allemand]] ''m'', [[allemande]] ''f''
+*French: [[Allemand]] ''m'', [[Allemande]] ''f''
 *[[Frisian]]: [[Dútser]] ''m'', [[Dútse]] ''f''
 *German: [[Deutscher]] ''m'', [[Deutsche]] ''f''
 *[[Guaraní]]: [[Alemaniagua]]
@@ -57,7 +57,7 @@
 *Dutch: [[Duits]] ''n''
 *[[Esperanto]]: [[Germana]]
 *Finnish: [[saksa]]
-*French: [[Allemand]] ''m''
+*French: [[allemand]] ''m''
 *[[Frisian]]: [[Dútsk]] ''n''
 *German: [[Deutsch]] ''n''
 *[[Indonesian]]: [[bahasa]] [[Jerman]]
@@ -117,7 +117,8 @@
 #Being close relatives.
 
 ====Translations====
-*French: [[germain]]
+
+*French: [[germain]] ''m'', [[germaine]] ''f''
 *Italian: [[germano]] ''m'', [[germana]] ''f''
 *Portuguese: [[germano]] ''m'', [[germana]] ''f''
 
