{{fr}}: [[gujarati]] ''m'' (1), [[Gujarati]] ''m/f'' (2) <Gujarati#38317>

--- a/wiki/Gujarati.wikitext
+++ b/wiki/Gujarati.wikitext
@@ -20,12 +20,12 @@
 :*{{en}}: Gujarati
 :*{{fa}}: [[گجراتی]]
 :*{{fi}}: [[gudžarati]]
-:*{{fr}}: [[Goudjrati]]
+:*{{fr}}: [[gujarati]] ''m'' (1), [[Gujarati]] ''m/f'' (2)
 :*{{de}}: [[Gujaratisch]], [[Gudscharati]]
 :*{{el}}: [[Γκουτζαρατικά]]
 :*{{gu}}: [[ગુજરાતી]]
 :*{{he}}: [[גוג'רטית]]
-:*{{hi}}: [[गुजराती]]
+:*{{hi}}: [[गुजराती]] ''f''
 :*{{hu}}: [[Gudzsaráti]]
 :*{{id}}: Gujarati
 :*{{it}}: Gujarati
