--- a/wiki/doceo.wikitext
+++ b/wiki/doceo.wikitext
@@ -1,9 +1,201 @@
 ==Latin==
-
+===Pronunciation===
+*[[AHD]]: <big> d&#335;-k&#277;&prime;&#277;-r&#277; </big>
 ===Verb===
-'''[[doceo]]''', infinitive '''docere''', perfect '''[[docui]]''', perfect passive participle '''[[doctus]]'''
-
+(present 1st person sg.: '''doce&#333;''', infinitive: '''doc&#275;re''', perfect: '''docu&#299;''', perfect passive participle: '''doctus''')
 # [[teach]]
+
+====Conjugation====
+Second conjugation (2).
+{| border="1" cellpadding="2"
+!style="background:#F1BC4E;" colspan=3| <small>''Number''
+!style="background:#F1BC4E;" colspan=3| <small>''Singular''
+!style="background:#F1BC4E;" colspan=3| <small>''Plural''
+|-
+!style="background:#F1BC4E;" colspan=3| <small>''Tense \ Person''
+!style="background:#F1BC4E;"| <small>''1.''
+!style="background:#F1BC4E;"| <small>''2.''
+!style="background:#F1BC4E;"| <small>''3.''
+!style="background:#F1BC4E;"| <small>''11.''
+!style="background:#F1BC4E;"| <small>''22.''
+!style="background:#F1BC4E;"| <small>''33.''
+|-
+!style="background:#54E9FA;" rowspan=12|<small>I<br>n<br>d<br>i<br>c<br>a<br>t<br>i<br>v<br>e
+!style="background:#54E9FA;" rowspan=6|<small>A<br>c<br>t<br>i<br>v<br>e
+!style="background:#54E9FA;"|<small>''Present''
+|style="background:#FBFCE4;"|doce&#333;
+|style="background:#FBFCE4;"|doc&#275;s
+|style="background:#FBFCE4;"|docet
+|style="background:#FBFCE4;"|doc&#275;mus
+|style="background:#FBFCE4;"|doc&#275;tis
+|style="background:#FBFCE4;"|docent
+|-
+!style="background:#54E9FA;"| <small>''Future''
+|style="background:#FBFCE4;"|doc&#275;b&#333;
+|style="background:#FBFCE4;"|doc&#275;bis
+|style="background:#FBFCE4;"|doc&#275;bit
+|style="background:#FBFCE4;"|doc&#275;bimus
+|style="background:#FBFCE4;"|doc&#275;bitis
+|style="background:#FBFCE4;"|doc&#275;bunt
+|-
+!style="background:#54E9FA;"| <small>''Imperfect''
+|style="background:#FBFCE4;"|doc&#275;bam
+|style="background:#FBFCE4;"|doc&#275;b&#257;s
+|style="background:#FBFCE4;"|doc&#275;bat
+|style="background:#FBFCE4;"|doc&#275;b&#257;mus
+|style="background:#FBFCE4;"|doc&#275;b&#257;tis
+|style="background:#FBFCE4;"|doc&#275;bant
+|-
+!style="background:#54E9FA;"| <small>''Perfect''
+|style="background:#FBFCE4;"|docu&#299;
+|style="background:#FBFCE4;"|docuist&#299;
+|style="background:#FBFCE4;"|docuit
+|style="background:#FBFCE4;"|docuimus
+|style="background:#FBFCE4;"|docuistis
+|style="background:#FBFCE4;"|docu&#275;runt
+|-
+!style="background:#54E9FA;"| <small>''Future Perfect''
+|style="background:#FBFCE4;"|docuer&#333;
+|style="background:#FBFCE4;"|docueris
+|style="background:#FBFCE4;"|docuerit
+|style="background:#FBFCE4;"|docuerimus
+|style="background:#FBFCE4;"|docueritis
+|style="background:#FBFCE4;"|docuerint
+|-
+!style="background:#54E9FA;"| <small>''Pluperfect''
+|style="background:#FBFCE4;"|docueram
+|style="background:#FBFCE4;"|docuer&#257;s
+|style="background:#FBFCE4;"|docuerat
+|style="background:#FBFCE4;"|docuer&#257;mus
+|style="background:#FBFCE4;"|docuer&#257;tis
+|style="background:#FBFCE4;"|docuerant
+|-
+!style="background:#54E9FA;" rowspan=6| <small>P<br>a<br>s<br>s<br>i<br>v<br>e
+!style="background:#54E9FA;"|<small>''Present''
+|style="background:#FBFCE4;"|doceor
+|style="background:#FBFCE4;"|doc&#275;ris
+|style="background:#FBFCE4;"|doc&#275;tur
+|style="background:#FBFCE4;"|doc&#275;mur
+|style="background:#FBFCE4;"|doc&#275;min&#299;
+|style="background:#FBFCE4;"|docentur
+|-
+!style="background:#54E9FA;"|<small>''Future''
+|style="background:#FBFCE4;"|doc&#275;bor
+|style="background:#FBFCE4;"|doc&#275;beris
+|style="background:#FBFCE4;"|doc&#275;bitur
+|style="background:#FBFCE4;"|doc&#275;bimur
+|style="background:#FBFCE4;"|doc&#275;bimin&#299;
+|style="background:#FBFCE4;"|doc&#275;buntur
+|-
+!style="background:#54E9FA;"|<small>''Imperfect''
+|style="background:#FBFCE4;"|doc&#275;bar
+|style="background:#FBFCE4;"|doc&#275;b&#257;ris
+|style="background:#FBFCE4;"|doc&#275;b&#257;tur
+|style="background:#FBFCE4;"|doc&#275;b&#257;mur
+|style="background:#FBFCE4;"|doc&#275;b&#257;min&#299;
+|style="background:#FBFCE4;"|doc&#275;bantur
+|-
+!style="background:#54E9FA;"|<small>''Perfect''
+|style="background:#FBFCE4;"|doctus<font color="red"><sup>1</sup></font><br>sum
+|style="background:#FBFCE4;"|doctus<font color="red"><sup>1</sup></font><br>es
+|style="background:#FBFCE4;"|doctus<font color="red"><sup>1</sup></font><br>est
+|style="background:#FBFCE4;"|doct&#299; <font color="red"><sup>2</sup></font><br>sumus
+|style="background:#FBFCE4;"|doct&#299; <font color="red"><sup>2</sup></font><br>estis
+|style="background:#FBFCE4;"|doct&#299; <font color="red"><sup>2</sup></font><br>sunt
+|-
+!style="background:#54E9FA;"|<small>''Future Perfect''
+|style="background:#FBFCE4;"|doctus<font color="red"><sup>1</sup></font><br>er&#333;
+|style="background:#FBFCE4;"|doctus<font color="red"><sup>1</sup></font><br>eris
+|style="background:#FBFCE4;"|doctus<font color="red"><sup>1</sup></font><br>erit
+|style="background:#FBFCE4;"|doct&#299; <font color="red"><sup>2</sup></font><br>erimus
+|style="background:#FBFCE4;"|doct&#299; <font color="red"><sup>2</sup></font><br>eritis
+|style="background:#FBFCE4;"|doct&#299; <font color="red"><sup>2</sup></font><br>erunt
+|-
+!style="background:#54E9FA;"|<small>''Pluperfect''
+|style="background:#FBFCE4;"|doctus<font color="red"><sup>1</sup></font><br>eram
+|style="background:#FBFCE4;"|doctus<font color="red"><sup>1</sup></font><br>er&#257;s
+|style="background:#FBFCE4;"|doctus<font color="red"><sup>1</sup></font><br>erat
+|style="background:#FBFCE4;"|doct&#299; <font color="red"><sup>2</sup></font><br>er&#257;mus
+|style="background:#FBFCE4;"|doct&#299; <font color="red"><sup>2</sup></font><br>er&#257;tis
+|style="background:#FBFCE4;"|doct&#299; <font color="red"><sup>2</sup></font><br>erant
+|-
+!style="background:#92B887;" rowspan=8|<small>S<br>u<br>b<br>j<br>u<br>n<br>c<br>t<br>i<br>v<br>e
+!style="background:#92B887;" rowspan=4|<small>A<br>c<br>t<br>i<br>v<br>e
+!style="background:#92B887;"|<small>''Present''
+|style="background:#E7FEE9;"| doceam
+|style="background:#E7FEE9;"| doce&#257;s
+|style="background:#E7FEE9;"| doceat
+|style="background:#E7FEE9;"| doce&#257;mus
+|style="background:#E7FEE9;"| doce&#257;tis
+|style="background:#E7FEE9;"| doceant
+|-
+!style="background:#92B887;"|<small>''Imperfect''
+|style="background:#E7FEE9;"| doc&#275;rem
+|style="background:#E7FEE9;"| doc&#275;r&#275;s
+|style="background:#E7FEE9;"| doc&#275;ret
+|style="background:#E7FEE9;"| doc&#275;r&#275;mus
+|style="background:#E7FEE9;"| doc&#275;r&#275;tis
+|style="background:#E7FEE9;"| doc&#275;rent
+|-
+!style="background:#92B887;"|<small>''Perfect''
+|style="background:#E7FEE9;"| docuerim
+|style="background:#E7FEE9;"| docuer&#299;s
+|style="background:#E7FEE9;"| docuerit
+|style="background:#E7FEE9;"| docuer&#299;mus
+|style="background:#E7FEE9;"| docuer&#299;tis
+|style="background:#E7FEE9;"| docuerint
+|-
+!style="background:#92B887;"|<small>''Pluerfect''
+|style="background:#E7FEE9;"| docuissem
+|style="background:#E7FEE9;"| docuiss&#275;s
+|style="background:#E7FEE9;"| docuisset
+|style="background:#E7FEE9;"| docuiss&#275;mus
+|style="background:#E7FEE9;"| docuiss&#275;tis
+|style="background:#E7FEE9;"| docuissent
+|-
+!style="background:#92B887;" rowspan=4|<small>P<br>a<br>s<br>s<br>i<br>v<br>e
+!style="background:#92B887;"|<small>''Present''
+|style="background:#E7FEE9;"| docear
+|style="background:#E7FEE9;"| doce&#257;ris
+|style="background:#E7FEE9;"| doce&#257;tur
+|style="background:#E7FEE9;"| doce&#257;mur
+|style="background:#E7FEE9;"| doce&#257;min&#299;
+|style="background:#E7FEE9;"| doceantur
+|-
+!style="background:#92B887;"|<small>''Imperfect''
+|style="background:#E7FEE9;"| doc&#275;rer
+|style="background:#E7FEE9;"| doc&#275;r&#275;ris
+|style="background:#E7FEE9;"| doc&#275;r&#275;tur
+|style="background:#E7FEE9;"| doc&#275;r&#275;mur
+|style="background:#E7FEE9;"| doc&#275;r&#275;min&#299;
+|style="background:#E7FEE9;"| doc&#275;rentur
+|-
+!style="background:#92B887;"|<small>''Perfect''
+|style="background:#E7FEE9;"|doctus<font color="red"><sup>1</sup></font><br>sim
+|style="background:#E7FEE9;"|doctus<font color="red"><sup>1</sup></font><br>s&#299;s
+|style="background:#E7FEE9;"|doctus<font color="red"><sup>1</sup></font><br>sit
+|style="background:#E7FEE9;"|doct&#299; <font color="red"><sup>2</sup></font><br>s&#299;mus
+|style="background:#E7FEE9;"|doct&#299; <font color="red"><sup>2</sup></font><br>s&#299;tis
+|style="background:#E7FEE9;"|doct&#299; <font color="red"><sup>2</sup></font><br>sint
+|-
+!style="background:#92B887;"|<small>''Pluperfect''
+|style="background:#E7FEE9;"|doctus<font color="red"><sup>1</sup></font><br>essem
+|style="background:#E7FEE9;"|doctus<font color="red"><sup>1</sup></font><br>ess&#275;s
+|style="background:#E7FEE9;"|doctus<font color="red"><sup>1</sup></font><br>esset
+|style="background:#E7FEE9;"|doct&#299; <font color="red"><sup>2</sup></font><br>ess&#275;mus
+|style="background:#E7FEE9;"|doct&#299; <font color="red"><sup>2</sup></font><br>ess&#275;tis
+|style="background:#E7FEE9;"|doct&#299; <font color="red"><sup>2</sup></font><br>essent
+|-
+!style="background:#BD91BD;" colspan=3| <small>Imperative
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|style="background:#FCF2E9;"| doc&#275;
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|style="background:#FCF2E9;"| doc&#275;te
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|}
+<font color="red"> 1 </font> = doctus / docta / doctum <br>
+<font color="red"> 2 </font> = doct&#299; / doctae / docta  <br>
 
 ===Related Terms===
 *[[docent]]
