/* Verb */ Non-personal forms. <doceo#48385>

--- a/wiki/doceo.wikitext
+++ b/wiki/doceo.wikitext
@@ -5,6 +5,44 @@
 (present 1st person sg.: '''doce&#333;''', infinitive: '''doc&#275;re''', perfect: '''docu&#299;''', perfect passive participle: '''doctus''')
 # [[teach]]
 
+====Participles====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+|style="background:#F7F7F5;" width=125px| <big> doc&#275;ns
+|style="background:#F7F7F5;" align="center" width=125px| &mdash;&mdash;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+|style="background:#F7F7F5;" align="center"| &mdash;&mdash;
+|style="background:#F7F7F5;"| <big> doctus
+|-
+!style="background:#D0D0B0;"| ''Future''
+|style="background:#F7F7F5;"| <big> doct&#363;rus
+|style="background:#F7F7F5;"| <big> docendus
+|}
+
+====Infinitives====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+|style="background:#F7F7F5;" width=125px| <big> doc&#275;re
+|style="background:#F7F7F5;" width=125px| <big> doc&#275;r&#299;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+|style="background:#F7F7F5;"| <big> docuisse
+|style="background:#F7F7F5;"| <big> doctus esse
+|-
+!style="background:#D0D0B0;"| ''Future''
+|style="background:#F7F7F5;"| <big> doct&#363;rus esse
+|style="background:#F7F7F5;"| <big> doctum &#299;r&#299;
+|}
+
 ====Conjugation====
 Second conjugation (2).
 {| border="1" cellpadding="2"
