--- a/wiki/disco.wikitext
+++ b/wiki/disco.wikitext
@@ -1,3 +1,17 @@
+==Italian==
+===Noun===
+'''disco''' ''m'' (''plural'': [[dischi]], diminutive: [[dischetto]])
+
+# [[disc]], [[disk]]
+
+===Related terms===
+*[[discobolo]]
+*[[discografia]]
+*[[discoide]]
+*[[discolibro]]
+
+----
+
 ==Latin==
 ===Verb===
 '''disco''', '''[[discere]]''', '''[[dedici]]'''  ''Third conjugation''
