--- a/wiki/disc.wikitext
+++ b/wiki/disc.wikitext
@@ -1,8 +1,9 @@
 ==English==
-
 ===Noun===
-
 '''disc'''
 
 #A flat round plate
 #A circular structure either in plants or animals; as, a blood disc, a germinal disc, etc.  Same as Disk.
+
+===Variant spelling===
+*[[disk]]
