--- a/wiki/%E6%BC%A2%E8%AA%9E.wikitext
+++ b/wiki/%E6%BC%A2%E8%AA%9E.wikitext
@@ -4,7 +4,14 @@
 ===Noun===
 # [[Chinese]]
 
-
 ===See also===
 simplified character
 [[汉语]]
+----
+
+==Japanese==
+===Noun===
+'''[[漢]][[語]]''' (かんご, kango)
+
+# a Japanese word of Chinese origin
+# a Japanese word of kanji, with On reading
