--- a/wiki/oncoming.wikitext
+++ b/wiki/oncoming.wikitext
@@ -6,3 +6,5 @@ The beginning or early stages.
 Moving toward one, 
 
 [[Synonym]]s: [[approaching]], [[moving]], [[onset]]
+
+See also: [[upcoming]].
