--- a/wiki/upcoming.wikitext
+++ b/wiki/upcoming.wikitext
@@ -1,4 +1,4 @@
 == Adjective ==
-Of the relatively near future; ''the upcoming [[spring]] [[fashion]]s''
+Of the relatively near future; ''upcoming movies (also known as [[trailer]]s). ''
 
 See also : [[oncoming]].
