--- a/wiki/upcoming.wikitext
+++ b/wiki/upcoming.wikitext
@@ -1,4 +1,7 @@
 == Adjective ==
-Of the relatively near future; ''upcoming movies (also known as [[trailer]]s). ''
+Of the relatively near future; 
+
+ ''Upcoming movies (also known as [[trailer]]s). ''
+ ''Federal [[budget]]s lay out government spending for the upcoming year''
 
 See also : [[oncoming]].
