--- a/wiki/%E6%B1%89.wikitext
+++ b/wiki/%E6%B1%89.wikitext
@@ -13,18 +13,19 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#Chinese people
+*# the river Han
+*# [[Chinese]] people
 *# Chinese language
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': yì (yi4)
-*** '''[[Wade-Giles]]''': i<sup>4</sup>
+*** '''[[Pinyin]]''': hàn (han4), yì (yi4)
+*** '''[[Wade-Giles]]''': han<sup>4</sup>, i<sup>4</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
 *** '''[[Jyutping]]''':
@@ -33,6 +34,23 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[漢]]
+
+===Compounds===
+*[[汉白玉]]
+*[[汉奸]]
+*[[汉界]]
+*[[汉民]]
+*[[汉人]]
+*[[汉文]]
+*[[汉姓]]
+*[[汉学]]
+*[[汉语]]
+*[[汉语拼音]]
+*[[汉语水平考试]]
+*[[汉子]]
+*[[汉字]]
+*[[汉字编码]]
+*[[汉族]]
 
 * '''Other info''': 
 
