--- a/wiki/%E6%BC%A2.wikitext
+++ b/wiki/%E6%BC%A2.wikitext
@@ -7,7 +7,7 @@
 * '''Stroke order'''
 **漢 looks like<br>
 http://web.mit.edu/jpnet/ji/gifs/200x200/2033.gif
-**As a chinese character, 漢 can be broken down to:  [[水]] (water), [[廾]] (grass), [[口]] (mouth) and [[夫]] ().
+**As a chinese character, 漢 can be broken down to:  [[水]] (water), [[廾]] (grass), [[口]] (mouth) and [[夫]] (Japanese shinjitai). The traditional has 廿, instead of 廾.
 
 * '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 3413<sub>4</sub>
 
@@ -15,11 +15,13 @@ http://web.mit.edu/jpnet/ji/gifs/200x200/2033.gif
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': the Chinese people, Chinese language
+* '''Common Meaning''': 
+*#the River Han
+*#the Chinese people, Chinese language
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -38,11 +40,17 @@ http://web.mit.edu/jpnet/ji/gifs/200x200/2033.gif
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[かん]] (kan)
 ** '''[[Kun]]''': [[から]] (kara)
+
+===Compounds===
+*[[漢音]]
+*[[漢語]]
+*[[漢字]]
+*[[漢方]]
 
 * '''Other info''':
 **漢 writing method you can see in [http://web.mit.edu/jpnet/ji/movies/2033.mov movie]. (need a *.mov file player)
