--- a/wiki/upcoming.wikitext
+++ b/wiki/upcoming.wikitext
@@ -1,7 +1,9 @@
-== Adjective ==
-Of the relatively near future; 
+==English==
+=== Adjective ===
 
- ''Upcoming movies (also known as [[trailer]]s). ''
- ''Federal [[budget]]s lay out government spending for the upcoming year''
+#Of the relatively near future
+#:''Upcoming movies (also known as [[trailer]]s). ''
+#:''Federal [[budget]]s lay out government spending for the upcoming year''
 
-See also : [[oncoming]].
+===See also===
+*[[oncoming]]
