--- a/wiki/Kabyle.wikitext
+++ b/wiki/Kabyle.wikitext
@@ -3,6 +3,11 @@
 '''Kabyle'''
 
 # a [[w:Northern Berber languages|Northern Berber language]] of the [[w:Berber languages|Berber]] branch of the [[w:Afro-Asiatic languages|Afro-Asiatic language]] family. There are 2,537,000 speakers in [[Algeria]], and another 537,000 speakers in [[France]] and [[Belgium]].
+# Member of the Kabyle people.
+
+==== Translations ====
+
+*{{fr}}: [[kabyle]] ''m'' (1), [[Kabyle]] ''m/f'' (2)
 
 ===See also===
 *[[w:Kabyle|Wikipedia article on Kabyle]]
