{{fr}}: [[carélien]] ''m'' <Karelian#54053>

--- a/wiki/Karelian.wikitext
+++ b/wiki/Karelian.wikitext
@@ -18,7 +18,7 @@
 :*{{nl}}: [[Karelisch]]
 :*{{et}}: [[Karjala]]
 :*{{fi}}: [[karjala]]
-:*{{fr}}: [[Carélien]]
+:*{{fr}}: [[carélien]] ''m''
 :*{{ga}}: [[Carelio]]
 :*{{de}}: [[Karelisch]]
 :*{{hu}}: [[Karjalai]]
