{{fr}}: [[Kashmiri]] ''m/f'' (1), [[kashmiri]] ''m'' (2) <Kashmiri#49636>

--- a/wiki/Kashmiri.wikitext
+++ b/wiki/Kashmiri.wikitext
@@ -5,14 +5,21 @@
 # A person from [[Kashmir]] or of Kashmiri descent
 # The language spoken in [[Kashmir]]
 
-==== Translation ====
-*Hindi: [[कश्मीरी]]
+==== Translations ====
+
+*{{fr}}: [[Kashmiri]] ''m/f'' (1), [[kashmiri]] ''m'' (2)
+*Hindi: [[कश्मीरी]] (1, 2)
 *Kashmiri: [[کشمیرى]], [[कश्मीरी]]
 
 ===Adjective===
 '''Kashmiri'''
 
 # Of or pertaining to the people [[Kashmir]] or the Kashmiri language.
+
+==== Translations ====
+
+*{{fr}}: [[kashmiri]] ''m/f''
+*Hindi: [[कश्मीरी]]
 
 ===See also===
 *[[Kashmir]]
