--- a/wiki/Kazakh.wikitext
+++ b/wiki/Kazakh.wikitext
@@ -7,7 +7,7 @@
 ====Translations====
 *Chinese: [[哈萨克人]]
 *{{nl}}: [[Kazachs]] (2)
-*French: Kazakh
+*{{fr}}: [[kazakh]] ''m'' (1), [[Kazakh]] ''m'' (2), [[Kazakhe]] ''f'' (2)
 *German: [[Kasache]] ''m'', [[Kasachin]] ''f''
 *[[Romanica]]: [[kazakh]]
 *Spanish: [[kazajo]]
@@ -18,8 +18,9 @@
 #Of, from, or pertaining to Kazakhstan, the Kazakh people or the Kazakh language.
 
 ====Translations====
+
 *Chinese: [[哈萨克的]]
-*French: kazakh
+*French: [[kazakh]] ''m'', [[kazakhe]] ''f''
 *German: [[kasachisch]]
 *[[Romanica]]: [[kazakh]]
 *Spanish: [[kazajo]]
