--- a/wiki/shampoo.wikitext
+++ b/wiki/shampoo.wikitext
@@ -4,8 +4,12 @@ From the [[Hindi]] ''champo'', the [[imperative]] form of the verb ''champna'', 
 
 ===Noun===
 # A traditional [[Indian]] and [[Persian]] body [[massage]] given after pouring [[warm]] [[water]] over the body and rubbing it with [[extract]]s from [[herb]]s.
+# A [[commercial]] [[liquid]] [[soap]] product for [[wash]]ing [[hair]] or other fibres, such as [[carpet]]s.
 
-# A [[commercial]] [[liquid]] [[soap]] product for [[wash]]ing [[hair]] or other fibers, such as [[carpet]]s. 
+====Translations====
+*Chinese: [[香波]] (xiangbo)
+*French: [[shampoing]]
+*Japanese: [[シャンプー]]
 
 ===Verb===
 # To wash one's hair with shampoo.
