--- a/wiki/pr0n.wikitext
+++ b/wiki/pr0n.wikitext
@@ -3,4 +3,4 @@
 ===Noun===
 '''pr0n'''
 
-# (''Internet, colloquial'') Variant spelling of [[porn]].
+#''(Internet slang):'' Corruption of [[porn]].
